2006-04-06  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.14.

	* configure.in: Bump version.

	* gconf/gconf-dbus.c (gconf_engine_dir_exists): Unref the reply,
	fixes leak.

	* gconf/gconf-client.c (get): Free the entry if we don't return
	it, fixes small leak. Patch from Kimmo Hamalainen.

2006-03-03  Richard Hult  <richard@imendio.com>

	* gconf/gconf-internals.c: (gconf_load_source_path):
	* gconf/gconf-internals.h: Add gconf_address_list_free. Don't copy
	strings unneccesarily, merge from upstream.
	
	* gconf/gconfd.c: (gconf_server_load_sources): Use
	gconf_address_list_free to plug tiny, once per gconfd, leak.

2006-03-03  Richard Hult  <richard@imendio.com>

	* gconf/gconfd.c (gconf_server_load_sources): Deep-free the list.

2006-02-16  Richard Hult  <richard@imendio.com>

	* gconf/Makefile.am:
	* gconf/gconf-dbus.c: (ensure_dbus_connection): Get rid of the bus
	address environment variable since we can use dbus API from 0.60
	to get a private bus.

2006-01-26  Richard Hult  <richard@imendio.com>

	* gconf/Makefile.am: Patch from Kimmo Hamalainen to fix typo for
	system bus address.

2006-01-20  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.13.

	* gconf/gconf-client.c (clear_cache_foreach): Remove extra free
	that caused double-freeing. Patch from maemo, and already fixed
	upstream.

2006-01-19  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus-utils.c: (gconf_dbus_utils_get_entries): Use
	the right iter, bug introduced by the move to an array instead of
	just prepending entries.

2005-12-22  Richard Hult  <richard@imendio.com>

	* gconf/Makefile.am: Use pkg-config to get the default system bus
	address.

	* configure.in: Require dbus 0.60.

	* gconf/gconfd-dbus.c (gconfd_dbus_init): Replace the inhibit
	replacement flag with 0 (no replace is default in dbus 0.60+).

2005-12-15  Richard Hult  <richard@imendio.com>

	* gconf/gconfd.c: (main): Plug two small leaks, from maemo gconf.

2005-11-22  Richard Hult  <richard@imendio.com>
